fixing color and adding some spacing

--- a/src/components/social/sozial.module.css
+++ b/src/components/social/sozial.module.css
@@ -2,6 +2,8 @@
 }
 
 .link {
+  margin: calc(var(--base-spacing) * 2);
+  cursor: pointer;
 }
 
 .sozial-links {
